--- a/index.html
+++ b/index.html
@@ -655,31 +655,44 @@
       if (file) handleFile(file);
     });
 
-    function handleFile(file) {
-      imageMediaType = file.type;
-      
+   function handleFile(file) {
       const reader = new FileReader();
       reader.onload = (e) => {
-        const base64Full = e.target.result;
-        imageData = base64Full.split(',')[1]; // Remove data:image/...;base64, prefix
+        const img = new Image();
+        img.onload = () => {
+          // Resize to max 800px on longest side
+          const MAX = 800;
+          let w = img.width, h = img.height;
+          if (w > h) { if (w > MAX) { h = h * MAX / w; w = MAX; } }
+          else { if (h > MAX) { w = w * MAX / h; h = MAX; } }
 
-        // Show preview
-        uploadZone.classList.add('has-image');
-        uploadZone.innerHTML = `
-          <img src="${base64Full}" class="preview-img" alt="Your fridge">
-          <span class="change-photo">tap to change photo</span>
-          <input type="file" id="fileInput" accept="image/*" style="display:none">
-        `;
+          const canvas = document.createElement('canvas');
+          canvas.width = w;
+          canvas.height = h;
+          canvas.getContext('2d').drawImage(img, 0, 0, w, h);
 
-        // Re-bind file input
-        const newInput = uploadZone.querySelector('input[type="file"]');
-        uploadZone.addEventListener('click', () => newInput.click());
-        newInput.addEventListener('change', (ev) => {
-          const f = ev.target.files[0];
-          if (f) handleFile(f);
-        });
+          const compressed = canvas.toDataURL('image/jpeg', 0.7);
+          imageData = compressed.split(',')[1];
+          imageMediaType = 'image/jpeg';
 
-        roastBtn.disabled = false;
+          // Show preview
+          uploadZone.classList.add('has-image');
+          uploadZone.innerHTML = `
+            <img src="${compressed}" class="preview-img" alt="Your fridge">
+            <span class="change-photo">tap to change photo</span>
+            <input type="file" id="fileInput" accept="image/*" style="display:none">
+          `;
+
+          const newInput = uploadZone.querySelector('input[type="file"]');
+          uploadZone.addEventListener('click', () => newInput.click());
+          newInput.addEventListener('change', (ev) => {
+            const f = ev.target.files[0];
+            if (f) handleFile(f);
+          });
+
+          roastBtn.disabled = false;
+        };
+        img.src = e.target.result;
       };
       reader.readAsDataURL(file);
     }
